# fractal-printer

./: .gitignore  README.md  pyproject.toml
fractal_printer/: __init__.py  distance_functions.py  fractal_sdfs.py  paths.py
fractal_printer/mesh/: fractal_sdfs.py  mesh_generation.py
fractal_printer/preview/: controls_panel.py  main_window.py  modern_gl_widget.py  preview_app.py
fractal_printer/preview/shaders/: raymarch_julia.frag  raymarch_prism.frag
inputs/: example_julia.json  example_torus.json
notebooks/: egg.ipynb  jit_pipeline.ipynb  julia_pipeline.ipynb  julia_test.ipynb  sdf_2d.ipynb  sdf_pipeline.ipynb  speed_tests.ipynb
scripts/: main.py  profile.prof  profile_1.prof  test_julia.py
sdf/: README.md
sdf/docs/: render.py
sdf/examples/: blobby.py  customizable_box.py  example.py  gearlike.py  image.py  knurling.py  mesh.py  pawn.py  text.py  weave.py
tests/: distance_function_tests.ipynb  quaternion_tests.ipynb  voxel_iterator_tests.ipynb
